# netpeak-ai-request-triage

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: input_requests.csv
output/: output.json  report.md  review_queue.json
src/: __init__.py  artifact_generator.py  config.py  csv_reader.py  gemini_client.py  main.py  processor.py  prompt_builder.py  schemas.py
tests/: __init__.py  test_artifact_generator.py  test_csv_reader.py  test_gemini_client.py  test_main.py  test_processor.py  test_prompt_builder.py  test_schemas.py
