[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "netpeak-ai-request-triage"
version = "0.1.0"
description = "Structured triage of internal requests for an AI unit."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.2,<3.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "ruff>=0.9,<1.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/processor.py" = ["RUF001"]
"src/prompt_builder.py" = ["RUF001"]
"src/schemas.py" = ["RUF001"]
"tests/test_prompt_builder.py" = ["RUF001"]
"tests/test_schemas.py" = ["RUF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.setuptools]
packages = ["src"]
